src/test/deca/syntax/valid/resultats/test7_strings-synt.res
`> [16, 0] Program
   +> ListDeclClass [List with 0 elements]
   `> [16, 0] Main
      +> ListDeclVar [List with 0 elements]
      `> ListInst [List with 3 elements]
         []> [17, 1] Println
         ||  `> [17, 9] ListExpr [List with 1 elements]
         ||     []> [17, 9] StringLiteral (Hello 1)
         []> [18, 1] Println
         ||  `> [18, 9] ListExpr [List with 1 elements]
         ||     []> [18, 9] StringLiteral (\"\\Hello 2\")
         []> [20, 1] Println
             `> [20, 9] ListExpr [List with 1 elements]
                []> [20, 9] StringLiteral (abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_~#'{([-|^@)]=}+°$*%?,.;/:§!&<>)
